--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <nav>
             <ul id="navigation" >
-                <li><a href="#">RoadMaps</a></li>
+                <li><a href="python roadmap.html">RoadMaps</a></li>
                 <li><a href="#">FlashCards</a></li>
                 <li><a href="#">Quizzes</a></li>
                 <li><a href="#">About and Contact</a></li>
@@ -53,7 +53,7 @@
                 </p>
             </div>
             <div id="img">
-                <img src="images/img1.JPEG" alt="image 1">
+                <img src="img1.JPEG" alt="image 1">
             </div>
         </div>
         <div class="screen1">
@@ -65,7 +65,7 @@
                 </p>
             </div>
             <div id="img">
-                <img src="images/img1.JPEG" alt="image 1">
+                <img src="img1.JPEG" alt="image 1">
             </div>
         </div>
         <div class="screen">
@@ -76,7 +76,7 @@
                 </p>
             </div>
             <div id="img">
-                <img src="images/img1.JPEG" alt="image 1">
+                <img src="img1.JPEG" alt="image 1">
             </div>
         </div>
         <div class="screen1">
@@ -88,7 +88,7 @@
                 </p>
             </div>
             <div id="img">
-                <img src="images/img1.JPEG" alt="image 1">
+                <img src="img1.JPEG" alt="image 1">
             </div>
         </div>
 
