--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         <nav>
             <ul id="navigation" >
                 <li><a href="python roadmap.html">RoadMaps</a></li>
-                <li><a href="#">FlashCards</a></li>
+                <li><a href="flashcards.html">FlashCards</a></li>
                 <li><a href="#">Quizzes</a></li>
-                <li><a href="#">About and Contact</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
 
