--- a/index.html
+++ b/index.html
@@ -112,7 +112,28 @@
             &copy; Copyright 2024
         </span>
     </footer>
-    <script src="https://kit.fontawesome.com/44bdc731e1.js" crossorigin="anonymous"></script>
 
+<iframe
+    src="https://www.chatbase.co/chatbot-iframe/0ByKXPrwm450BYzXt9Ngc"
+    width="100%"
+    style="height: 100%; min-height: 700px"
+    frameborder="0"
+></iframe>
+
+
+
+    <script src="https://kit.fontawesome.com/44bdc731e1.js" crossorigin="anonymous"></script>
+<script>
+    window.embeddedChatbotConfig = {
+        chatbotId: "0ByKXPrwm450BYzXt9Ngc",
+        domain: "www.chatbase.co"
+    }
+</script>
+<script
+    src="https://www.chatbase.co/embed.min.js"
+    chatbotId="0ByKXPrwm450BYzXt9Ngc"
+    domain="www.chatbase.co"
+    defer>
+</script>
 </body>
 </html>
