--- a/index.html
+++ b/index.html
@@ -124,6 +124,17 @@
         domain: "www.chatbase.co"
     }
 </script>
-
+<script>
+    window.embeddedChatbotConfig = {
+        chatbotId: "Cz_qVufE6RuqNgcBVdC-N",
+        domain: "www.chatbase.co"
+    }
+</script>
+<script
+    src="https://www.chatbase.co/embed.min.js"
+    chatbotId="Cz_qVufE6RuqNgcBVdC-N"
+    domain="www.chatbase.co"
+    defer>
+</script>
 </body>
 </html>
